fix(public-search): Remove icons from collections and questions section headers. Updated layout for section headers to improve alignment and spacing.

--- a/src/app/features/public-search/public-search.component.scss
+++ b/src/app/features/public-search/public-search.component.scss
@@ -134,7 +134,15 @@
 
       .result-section {
         .section-header {
+          display: flex;
+          flex-direction: row;
+          align-items: center;
+          gap: 0.5rem;
           margin-bottom: 1rem;
+          i{
+            font-size: 1rem;
+            color: var(--p-accent-500);
+          }
 
           h3 {
             margin: 0;
